Disable D3DVsync with OOP-D.

The D3DVsync feature doesn't work with OOP-D, so don't try to use it at
the same time. GpuVSyncProviderWin can be simplified with OOP-D as it's
just an ExternalBeginFrameSource essentially without the process
boundary.

Bug: 787814
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I814671841df65fcd3141bcfa2ca9db8ea745ea0b
Reviewed-on: https://chromium-review.googlesource.com/1057846
Reviewed-by: Jonathan Backer <backer@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558390}
Former-commit-id: fb5a6945b8fb8fed66f02f067a5f81c22050b8a6